@@ -11,6 +11,8 @@
 #include <stdlib.h>
 #include <string.h>
 #include <getopt.h>
+#define __STDC_FORMAT_MACROS 1
+#include <inttypes.h>
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -43,7 +45,7 @@
 
 #define EBUFF_SZ 256
 
-static char * version_str = "1.07 20110401";
+static char * version_str = "1.08 20110513";
 
 static struct option long_options[] = {
         {"ck_cond", no_argument, 0, 'c'},
@@ -51,6 +53,7 @@ static struct option long_options[] = {
         {"help", no_argument, 0, 'h'},
         {"hex", no_argument, 0, 'H'},
         {"len", required_argument, 0, 'l'},
+        {"ident", no_argument, 0, 'i'},
         {"packet", no_argument, 0, 'p'},
         {"raw", no_argument, 0, 'r'},
         {"verbose", no_argument, 0, 'v'},
@@ -62,14 +65,18 @@ static void usage()
 {
     fprintf(stderr, "Usage: "
           "sg_sat_identify [--ck_cond] [--extend] [--help] [--hex] "
-          "[--len=16|12]\n"
-          "                       [--packet] [--raw] [--verbose] [--version] "
-          "DEVICE\n"
+          "[--ident]\n"
+          "                       [--len=16|12] [--packet] [--raw] "
+          "[--verbose]\n"
+          "                       [--version] DEVICE\n"
           "  where:\n"
           "    --ck_cond|-c     sets ck_cond bit in cdb (def: 0)\n"
           "    --extend|-e      sets extend bit in cdb (def: 0)\n"
           "    --help|-h        print out usage message then exit\n"
           "    --hex|-H         output response in hex\n"
+          "    --ident|-i       output WWN prefixed by 0x, if not available "
+          "output\n"
+          "                     0x0000000000000000\n"
           "    --len=16|12 | -l 16|12    cdb length: 16 or 12 bytes "
           "(default: 16)\n"
           "    --packet|-p      do IDENTIFY PACKET DEVICE (def: IDENTIFY "
@@ -90,10 +97,10 @@ static void dStrRaw(const char* str, int len)
 }
 
 static int do_identify_dev(int sg_fd, int do_packet, int cdb_len,
-                           int ck_cond, int extend, int do_hex, int do_raw,
-                           int verbose)
+                           int ck_cond, int extend, int do_indent,
+                           int do_hex, int do_raw, int verbose)
 {
-    int ok, res, ret;
+    int ok, j, res, ret;
     int protocol = 4;   /* PIO data-in */
     int t_dir = 1;      /* 0 -> to device, 1 -> from device */
     int byte_block = 1; /* 0 -> bytes, 1 -> 512 byte blocks */
@@ -111,6 +118,8 @@ static int do_identify_dev(int sg_fd, int do_packet, int cdb_len,
     unsigned char apt12CmdBlk[SAT_ATA_PASS_THROUGH12_LEN] =
                 {SAT_ATA_PASS_THROUGH12, 0, 0, 0, 0, 0, 0, 0,
                  0, 0, 0, 0};
+    const unsigned short * usp;
+    uint64_t ull;
 
     sb_sz = sizeof(sense_buffer);
     memset(sense_buffer, 0, sb_sz);
@@ -246,10 +255,21 @@ static int do_identify_dev(int sg_fd, int do_packet, int cdb_len,
         if (do_raw)
             dStrRaw((const char *)inBuff, 512);
         else if (0 == do_hex) {
-            printf("Response for IDENTIFY %sDEVICE ATA command:\n",
-                   (do_packet ? "PACKET " : ""));
-            dWordHex((const unsigned short *)inBuff, 256, 0,
-                     sg_is_big_endian());
+            if (do_indent) {
+                usp = (const unsigned short *)inBuff;
+                ull = 0;
+                for (j = 0; j < 4; ++j) {
+                    if (j > 0)
+                        ull <<= 16;
+                    ull |= usp[108 + j];
+                }
+                printf("0x%016" PRIx64 "\n", ull);
+            } else {
+                printf("Response for IDENTIFY %sDEVICE ATA command:\n",
+                       (do_packet ? "PACKET " : ""));
+                dWordHex((const unsigned short *)inBuff, 256, 0,
+                         sg_is_big_endian());
+            }
         } else if (1 == do_hex)
             dStrHex((const char *)inBuff, 512, 0);
         else if (2 == do_hex)
@@ -269,6 +289,7 @@ int main(int argc, char * argv[])
     int cdb_len = SAT_ATA_PASS_THROUGH16_LEN;
     int do_packet = 0;
     int do_hex = 0;
+    int do_indent = 0;
     int do_raw = 0;
     int verbose = 0;
     int ck_cond = 0;   /* set to 1 to read register(s) back */
@@ -278,7 +299,7 @@ int main(int argc, char * argv[])
     while (1) {
         int option_index = 0;
 
-        c = getopt_long(argc, argv, "cehHl:prvV", long_options,
+        c = getopt_long(argc, argv, "cehHil:prvV", long_options,
                         &option_index);
         if (c == -1)
             break;
@@ -296,6 +317,9 @@ int main(int argc, char * argv[])
             return 0;
         case 'H':
             ++do_hex;
+            break;
+        case 'i':
+            ++do_indent;
             break;
         case 'l':
            cdb_len = sg_get_num(optarg);
@@ -356,7 +380,7 @@ int main(int argc, char * argv[])
     }
 
     ret = do_identify_dev(sg_fd, do_packet, cdb_len, ck_cond, extend,
-                          do_hex, do_raw, verbose);
+                          do_indent, do_hex, do_raw, verbose);
 
     res = sg_cmds_close_device(sg_fd);
     if (res < 0) {
